Made nav elements level A lot of improvements and changes in general to the card.js Made container not wrap divs TODO: fix bug with last card appearing blurry after deleteing one of two

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,6 @@
 #container{
     display: flex;
     flex-direction: row;
-    flex-flow: wrap;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
